# web-streamlit

./: README.md  app.py  app1.py  app2.py  datos_ventas.csv  genera_csv.py  pyproject.toml  setup.py
PAGINA_WEB_STREAMLIT.egg-info/: PKG-INFO  SOURCES.txt
mi_paquete.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
