[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PAGINA-WEB-STREAMLIT"
version = "0.1.0"
authors = [
    {name="ivan ugarte", email="ivamugartem@gmail.com"},
]
description = "Descripción de mi paquete"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.0",
    "pandas"
]